add doc api
